# stalfos

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/stalc/: Cargo.toml  dyn_helloworld.stalib  helloworld.stm
src/stalc/src/: main.rs
src/stalc/test_programs/: dyn_helloworld.stsm  helloworld.sta
src/stalfos_example_programs/: Cargo.toml
src/stalfos_example_programs/src/: lib.rs
src/stalfos_vm/: Cargo.toml
src/stalfos_vm/src/: asm_parser.rs  assembler.rs  lib.rs  op_calls.rs  ops.rs  stal_dll.rs
