[package]
name = "stalfos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stalfos_vm={path="src/stalfos_vm"}
stalfos_example_programs={path="src/stalfos_example_programs"}

[profile.release]
opt-level = 3
lto = true
